ruapc-macro/tests/ui/fail/wrong_arity.stderr
error: custom attribute panicked
 --> tests/ui/fail/wrong_arity.rs:3:1
  |
3 | #[ruapc::service]
  | ^^^^^^^^^^^^^^^^^
  |
  = help: message: the function should be in the form `async fn func(&self, ctx: &Context, req: &Req) -> Result<Rsp>`.
